--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lucide-react": "^0.525.0",
     "next": "^15.3.4",
     "pg": "^8.16.2",
+    "react-player": "^3.3.1",
     "recharts": "^3.0.2"
   }
 }
