--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lucide-react": "^0.525.0",
     "next": "^15.3.4",
     "pg": "^8.16.2",
+    "react-icons": "^5.5.0",
     "react-player": "^3.3.1",
     "react-youtube": "^10.1.0",
     "recharts": "^3.0.2"
